Add rss link feed

--- a/app/src/main/res/layout/second_tab_fragment.xml
+++ b/app/src/main/res/layout/second_tab_fragment.xml
@@ -35,4 +35,31 @@
 
     </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>
 
+    <LinearLayout
+        android:layout_width="395dp"
+        android:layout_height="669dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/segmentedbutton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <View
+            android:id="@+id/vMainFeed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <View
+            android:id="@+id/vSecondaryFeedView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
