Finally working properly. Remains arrange configuration, inheritance crawler and add clock.

--- a/app/src/main/res/layout/first_tab_fragment.xml
+++ b/app/src/main/res/layout/first_tab_fragment.xml
@@ -38,8 +38,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tvRssChannel"
-            android:text="@string/tvRssChannel"/>
+            android:id="@+id/tvRssChannel"/>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
