Finally working properly. Remains arrange configuration and inheritance.

--- a/app/src/main/res/layout/first_tab_fragment.xml
+++ b/app/src/main/res/layout/first_tab_fragment.xml
@@ -28,13 +28,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tvDate"
-            android:text="@string/tvDate"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvTime"
-            android:text="@string/tvTime"/>
+            android:id="@+id/tvDate"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
